--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -188,7 +188,7 @@ jwt = ["jwt-api", "jwt-impl", "jwt-gson"]
 metrics = ["metrics-core", "metrics-jersey2", "metrics-jvm", "metrics-jmx", "metrics-servlets"]
 prometheus = ["prometheus-servlet", "prometheus-dropwizard", "prometheus-client"]
 kerby = ["kerby-core", "kerby-simplekdc"]
-gravitino = ["gravitino-core", "gravitino-server-common"]
+gravitino = ["gravitino-server-common"]
 
 [plugins]
 protobuf = { id = "com.google.protobuf", version.ref = "protobuf-plugin" }
